# Ai-Reel-Agent

./: README.md  crewai_reels_workflow_design.md  crewai_reels_workflow_skeleton.py  fix.txt  pyproject.toml  render.yaml
ai_reels_generator/: README.md  ai-reels-490418-e6d4e7089c4c.json  app.py  crewai_bootstrap.py  main.py  pyproject.toml  requirements.txt
ai_reels_generator/agents/: __init__.py  caption_agent.py  clip_selector_agent.py  export_agent.py  transcription_agent.py  video_editor_agent.py
ai_reels_generator/config/: __init__.py  prompts.py  settings.py
ai_reels_generator/models/: __init__.py  schemas.py
ai_reels_generator/services/: __init__.py  debug_webhook.py  job_manager.py  pipeline.py
ai_reels_generator/static/: app.js  styles.css
ai_reels_generator/static/js/: dom.js  jobs.js  renderers.js  ui.js  upload.js
ai_reels_generator/tasks/: __init__.py  caption_task.py  clip_selection_task.py  edit_task.py  export_task.py  transcription_task.py
ai_reels_generator/templates/: index.html
ai_reels_generator/tests/: test_ffmpeg_tools.py  test_schemas.py
ai_reels_generator/tools/: __init__.py  ffmpeg_tools.py  storage_tools.py  subtitle_tools.py  utils.py  whisper_tools.py
ai_reels_generator/workflows/: __init__.py  reels_pipeline.py
src/ai_reels_generator/: __init__.py  crew.py
src/ai_reels_generator/config/: agents.yaml  tasks.yaml
src/reels_agent/: crew.py  helpers.py  main.py  models.py  settings.py  tools.py
src/reels_agent/config/: agents.yaml  tasks.yaml
